--- a/android/SaveTheBird/app/src/main/res/layout/activity_main.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,6 @@
         android:layout_marginTop="163dp"
         android:textSize="36dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:id="@+id/splashLogo" />
 </RelativeLayout>
