--- a/android/SaveTheBird/app/src/main/res/layout/activity_setting.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_setting.xml
@@ -3,75 +3,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="@color/colorWhite"
-    tools:context="com.latte_project.stb.savethebird.SettingActivity">
+    tools:context="com.latte_project.stb.savethebird.SettingActivity"
+    android:weightSum="1">
 
     <FrameLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="324dp"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_height="306dp"
+
+        android:layout_marginBottom="@dimen/option_frame_margin"
+        android:layout_marginLeft="@dimen/option_frame_margin"
+        android:layout_marginRight="@dimen/option_frame_margin"
+        android:layout_marginTop="@dimen/option_frame_margin"
         android:background="@color/colorWhite"
-        android:layout_weight="0.25"
         android:backgroundTint="@color/button_material_light"
-        tools:context="com.latte_project.stb.savethebird.SettingActivity">
+        tools:context="com.latte_project.stb.savethebird.SettingActivity"
+        android:layout_weight="1">
 
 
         <!-- ボリューム -->
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Volume"
-            android:id="@+id/textView3"
+            android:id="@+id/volumeLbl"
             android:textColor="@android:color/widget_edittext_dark"
             android:textSize="32dp"
             android:layout_centerVertical="true"
             android:layout_alignStart="@+id/textView2"
             android:layout_gravity="bottom|left"
             android:layout_marginBottom="60dp"
-            android:layout_marginLeft="30dp" />
+            android:layout_marginLeft="@dimen/option_label_left" />
 
         <SeekBar
-            android:layout_width="247dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
+            android:id="@+id/volumeBar"
             android:layout_marginTop="43dp"
-            android:layout_below="@+id/textView3"
+            android:layout_marginLeft="@dimen/option_label_left"
+            android:layout_marginRight="@dimen/option_label_left"
+            android:layout_below="@+id/volumeLbl"
             android:max="99"
             android:indeterminate="false"
-            android:layout_alignStart="@+id/textView3"
-            android:layout_alignEnd="@+id/switch1"
+            android:layout_alignStart="@+id/volumeLbl"
+            android:layout_alignEnd="@+id/bgmSwitch"
             android:progress="50"
             android:layout_gravity="center_horizontal|bottom"
             android:layout_marginBottom="10dp" />
 
         <Switch
-            android:layout_width="262dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/switch1"
+            android:id="@+id/seSwitch"
             android:layout_gravity="left|center_vertical"
             android:layout_alignBottom="@+id/textView2"
-            android:textSize="32dp" android:layout_alignStart="@+id/switch2"
-            android:layout_alignEnd="@+id/switch2"
+            android:textSize="32dp" android:layout_alignStart="@+id/bgmSwitch"
+            android:layout_alignEnd="@+id/bgmSwitch"
             android:checked="true"
             android:text="SE"
             android:textColor="@android:color/widget_edittext_dark"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="@dimen/option_label_left"
             android:layout_marginBottom="-20dp" />
 
         <Switch
-            android:layout_width="256dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/switch2"
+            android:id="@+id/bgmSwitch"
             android:layout_gravity="left|top"
             android:layout_centerHorizontal="true"
             android:checked="true"
@@ -85,16 +85,20 @@
             android:layout_alignTop="@+id/bgm"
             android:layout_marginTop="100dp"
             android:textColor="@android:color/widget_edittext_dark"
-            android:layout_marginLeft="30dp" />
+            android:layout_marginLeft="@dimen/option_label_left" />
 
         <TextView
-            android:layout_width="297dp"
-            android:layout_height="38dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:paddingLeft="@dimen/option_label_left"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="オプション"
-            android:id="@+id/textView4"
-            android:layout_gravity="center_horizontal|top"
-            android:background="@color/colorPrimary" />
+            android:text="@string/optionPageTitle"
+            android:id="@+id/optionText"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/colorPrimary"
+            android:textSize="24dp" />
 
 
     </FrameLayout>
@@ -103,6 +107,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -116,12 +121,13 @@
         android:layout_width="294dp"
         android:layout_height="wrap_content"
         android:text="公式サイト"
-        android:id="@+id/button"
+        android:id="@+id/sitelink"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/seekBar"
+        android:layout_alignStart="@+id/volumeBar"
         android:layout_marginBottom="32dp"
-        android:layout_alignEnd="@+id/seekBar"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_alignEnd="@+id/volumeBar"
+        android:layout_gravity="center_horizontal|bottom"
+        android:onClick="onClick" />
 
     </FrameLayout>
 
@@ -129,8 +135,10 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="100px"
-        >
+        android:layout_height="70dp"
+        android:layout_weight="3"
+        android:background="@color/colorActionBar"
+        android:baselineAligned="false">
 
         <ImageButton
             android:adjustViewBounds="true"
@@ -139,9 +147,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/homeBtn"
-            android:src="@mipmap/sample_icon"
+            android:src="@mipmap/ic_menu_home"
             android:onClick="tabClick"
-            android:background="@android:color/white" />
+            android:padding="@dimen/menu_ic_padding"
+            android:background="@color/colorActionBar" />
 
         <ImageButton
             android:adjustViewBounds="true"
@@ -150,9 +159,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/characterBtn"
-            android:src="@mipmap/chara"
+            android:src="@mipmap/ic_menu_chara"
             android:onClick="tabClick"
-            android:background="@android:color/white" />
+            android:padding="@dimen/menu_ic_padding"
+            android:background="@color/colorActionBar" />
 
         <ImageButton
             android:adjustViewBounds="true"
@@ -161,10 +171,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/settingBtn"
-            android:src="@mipmap/gear"
+            android:src="@mipmap/ic_menu_setting"
             android:onClick="tabClick"
-            android:background="@android:color/white" />
+            android:padding="@dimen/menu_ic_padding"
+            android:background="@color/colorActionBar" />
     </LinearLayout>
-
 
 </LinearLayout>
