--- a/android/SaveTheBird/app/src/main/res/layout/activity_setting.xml
+++ b/android/SaveTheBird/app/src/main/res/layout/activity_setting.xml
@@ -12,7 +12,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="306dp"
-
         android:layout_marginBottom="@dimen/option_frame_margin"
         android:layout_marginLeft="@dimen/option_frame_margin"
         android:layout_marginRight="@dimen/option_frame_margin"
@@ -23,9 +22,22 @@
         android:layout_weight="1">
 
 
-        <!-- ボリューム -->
+
         <TextView
             android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:paddingLeft="@dimen/option_label_left"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/optionPageTitle"
+            android:id="@+id/optionText"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/colorPrimary"
+            android:textSize="24dp" />
+
+        <!-- ボリューム -->
+        <TextView
+            android:layout_width="178dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Volume"
@@ -46,59 +58,69 @@
             android:layout_marginLeft="@dimen/option_label_left"
             android:layout_marginRight="@dimen/option_label_left"
             android:layout_below="@+id/volumeLbl"
-            android:max="99"
+            android:max="15"
             android:indeterminate="false"
             android:layout_alignStart="@+id/volumeLbl"
-            android:layout_alignEnd="@+id/bgmSwitch"
+            android:layout_alignEnd="@+id/volumeLbl"
             android:progress="50"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="20dp" />
 
-        <Switch
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+
+
+        <ToggleButton
+            android:layout_width="62dp"
+            android:layout_height="50dp"
             android:id="@+id/seSwitch"
-            android:layout_gravity="left|center_vertical"
-            android:layout_alignBottom="@+id/textView2"
-            android:textSize="32dp" android:layout_alignStart="@+id/bgmSwitch"
-            android:layout_alignEnd="@+id/bgmSwitch"
-            android:checked="true"
-            android:text="SE"
-            android:textColor="@android:color/widget_edittext_dark"
-            android:layout_marginLeft="@dimen/option_label_left"
-            android:layout_marginBottom="-20dp" />
-
-        <Switch
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bgmSwitch"
-            android:layout_gravity="left|top"
-            android:layout_centerHorizontal="true"
-            android:checked="true"
-            android:text="BGM"
-            android:textOff="OFF"
-            android:textOn="ON"
-
-            android:layout_alignBottom="@+id/bgm"
-            android:layout_alignParentEnd="true"
+            android:layout_gravity="right|center_vertical"
             android:textSize="32dp"
-            android:layout_alignTop="@+id/bgm"
+            android:background="@drawable/toggle_bg"
+            android:button="@drawable/toggle_btn"
+            android:checked="true"
+            android:layout_marginRight="@dimen/option_label_left"
+            android:layout_marginBottom="-30dp"
+            android:textOff=""
+            android:textOn=""/>
+
+        <ToggleButton
+            android:layout_width="62dp"
+            android:layout_height="50dp"
+            android:id="@+id/bgmSwitch"
+            android:background="@drawable/toggle_bg"
+            android:button="@drawable/toggle_btn"
+            android:layout_gravity="right|top"
+            android:checked="true"
+            android:textOff=""
+            android:textOn=""
+            android:textSize="32dp"
             android:layout_marginTop="100dp"
-            android:textColor="@android:color/widget_edittext_dark"
-            android:layout_marginLeft="@dimen/option_label_left" />
+            android:layout_marginRight="@dimen/option_label_left"
+            />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:paddingLeft="@dimen/option_label_left"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/optionPageTitle"
-            android:id="@+id/optionText"
-            android:layout_gravity="center_horizontal"
-            android:background="@color/colorPrimary"
-            android:textSize="24dp" />
+            android:text="BGM"
+            android:id="@+id/bgmTxt"
+            android:layout_gravity="left|top"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="@dimen/option_label_left"
+            android:layout_marginTop="110dp"
+            android:textSize="32dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="SE"
+            android:id="@+id/seTxt"
+            android:layout_gravity="left|center_vertical"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="@dimen/option_label_left"
+            android:textSize="32dp"
+            android:layout_marginBottom="-30dp"
+            />
 
 
     </FrameLayout>
@@ -127,7 +149,8 @@
         android:layout_marginBottom="32dp"
         android:layout_alignEnd="@+id/volumeBar"
         android:layout_gravity="center_horizontal|bottom"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:linksClickable="false" />
 
     </FrameLayout>
 
