--- a/ios/SaveTheBird/SaveTheBird/Base.lproj/Main.storyboard
+++ b/ios/SaveTheBird/SaveTheBird/Base.lproj/Main.storyboard
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zKQ-ny-JxM">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="logotypejp_mp_m_1.1.ttf">
+            <string>Corporate-Logo-Medium</string>
+            <string>Corporate-Logo-Medium</string>
+            <string>Corporate-Logo-Medium</string>
+            <string>Corporate-Logo-Medium</string>
             <string>Corporate-Logo-Medium</string>
         </mutableArray>
     </customFonts>
@@ -85,15 +89,85 @@
                         <viewControllerLayoutGuide type="top" id="y5Z-cf-l7v"/>
                         <viewControllerLayoutGuide type="bottom" id="4wc-CR-vuT"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="lE5-74-mQv">
+                    <view key="view" contentMode="scaleAspectFill" id="lE5-74-mQv">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4WJ-IE-38s">
-                                <rect key="frame" x="241" y="217" width="118" height="31"/>
-                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uaD-Sz-Nux">
+                                <rect key="frame" x="100" y="501" width="400" height="30"/>
+                                <color key="backgroundColor" red="0.9042242169380188" green="0.91195636987686157" blue="0.49073439836502075" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="公式リンク">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Arm-UH-gkv">
+                                <rect key="frame" x="30" y="50" width="520" height="421"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="オプション" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xrM-qJ-4AT">
+                                        <rect key="frame" x="0.0" y="0.0" width="520" height="40"/>
+                                        <color key="backgroundColor" red="0.58258461952209473" green="0.71936541795730591" blue="0.91908246278762817" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Corporate-Logo-Medium" family="Corporate Logo Medium" pointSize="40"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4MO-iO-ZYY">
+                                        <rect key="frame" x="0.0" y="90" width="520" height="40"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BGM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbg-Jd-3tA">
+                                                <rect key="frame" x="0.0" y="0.0" width="471" height="40"/>
+                                                <fontDescription key="fontDescription" name="Corporate-Logo-Medium" family="Corporate Logo Medium" pointSize="40"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J9D-7f-yOb">
+                                                <rect key="frame" x="471" y="0.0" width="51" height="40"/>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dn8-Fh-oAN">
+                                        <rect key="frame" x="0.0" y="180" width="520" height="40"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6b1-RX-Md6">
+                                                <rect key="frame" x="0.0" y="0.0" width="471" height="40"/>
+                                                <fontDescription key="fontDescription" name="Corporate-Logo-Medium" family="Corporate Logo Medium" pointSize="40"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ev9-1b-BuZ">
+                                                <rect key="frame" x="471" y="0.0" width="51" height="40"/>
+                                                <connections>
+                                                    <action selector="seSwitchDidChanged:" destination="Gle-ZG-vEY" eventType="valueChanged" id="4BB-lY-BYE"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PcO-Qe-ZBI">
+                                        <rect key="frame" x="0.0" y="270" width="520" height="151"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lui-4g-l2E">
+                                                <rect key="frame" x="0.0" y="0.0" width="520" height="40"/>
+                                                <fontDescription key="fontDescription" name="Corporate-Logo-Medium" family="Corporate Logo Medium" pointSize="40"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Rr-wD-Vgs">
+                                                <rect key="frame" x="-2" y="40" width="524" height="112"/>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uaD-Sz-Nux" firstAttribute="leading" secondItem="lE5-74-mQv" secondAttribute="leading" constant="100" id="6Cc-xq-uTS"/>
+                            <constraint firstItem="Arm-UH-gkv" firstAttribute="leading" secondItem="lE5-74-mQv" secondAttribute="leading" constant="30" id="BRj-6p-RG0"/>
+                            <constraint firstAttribute="trailing" secondItem="uaD-Sz-Nux" secondAttribute="trailing" constant="100" id="Gt6-k5-aiS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Arm-UH-gkv" secondAttribute="trailing" constant="30" id="bd6-fo-rhJ"/>
+                            <constraint firstItem="Arm-UH-gkv" firstAttribute="top" secondItem="y5Z-cf-l7v" secondAttribute="bottom" constant="30" id="l9g-KB-gpf"/>
+                            <constraint firstItem="4wc-CR-vuT" firstAttribute="top" secondItem="uaD-Sz-Nux" secondAttribute="bottom" constant="20" id="oo7-K3-chm"/>
+                            <constraint firstItem="uaD-Sz-Nux" firstAttribute="top" secondItem="Arm-UH-gkv" secondAttribute="bottom" constant="30" id="spj-2B-gle"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" id="dnH-th-kz0"/>
                 </viewController>
